raylib/raylib_bindings.odin


    @(link_name="CheckCollisionPointCircle")
    check_collision_point_circle :: proc(
        point : Vector2,
        center : Vector2,
        radius : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionPointTriangle")
    check_collision_point_triangle :: proc(
        point : Vector2,
        p1 : Vector2,
        p2 : Vector2,
        p3 : Vector2
    ) -> bool ---;

    @(link_name="LoadImage")
    load_image :: proc(file_name : cstring) -> Image ---;

    @(link_name="LoadImageEx")
    load_image_ex :: proc(
        pixels : ^Color,
        width : _c.int,
        height : _c.int
    ) -> Image ---;

    @(link_name="LoadImagePro")
    load_image_pro :: proc(
        data : rawptr,
        width : _c.int,
        height : _c.int,
        format : _c.int
    ) -> Image ---;

    @(link_name="LoadImageRaw")
    load_image_raw :: proc(
        file_name : cstring,
        width : _c.int,
        height : _c.int,
        format : _c.int,
        header_size : _c.int
    ) -> Image ---;

    @(link_name="ExportImage")
    export_image :: proc(
        image : Image,
        file_name : cstring
    ) ---;

    @(link_name="ExportImageAsCode")
    export_image_as_code :: proc(
        image : Image,
        file_name : cstring
    ) ---;

    @(link_name="LoadTexture")
    load_texture :: proc(file_name : cstring) -> Texture2D ---;

    @(link_name="LoadTextureFromImage")
    load_texture_from_image :: proc(image : Image) -> Texture2D ---;

    @(link_name="LoadTextureCubemap")
    load_texture_cubemap :: proc(
        image : Image,
        layout_type : _c.int
    ) -> TextureCubemap ---;

    @(link_name="LoadRenderTexture")
    load_render_texture :: proc(
        width : _c.int,
        height : _c.int
    ) -> RenderTexture2D ---;

    @(link_name="UnloadImage")
    unload_image :: proc(image : Image) ---;

    @(link_name="UnloadTexture")
    unload_texture :: proc(texture : Texture2D) ---;

    @(link_name="UnloadRenderTexture")
    unload_render_texture :: proc(target : RenderTexture2D) ---;

    @(link_name="GetImageData")
    get_image_data :: proc(image : Image) -> ^Color ---;

    @(link_name="GetImageDataNormalized")
    get_image_data_normalized :: proc(image : Image) -> ^Vector4 ---;

    @(link_name="GetPixelDataSize")
    get_pixel_data_size :: proc(
        width : _c.int,
        height : _c.int,
        format : _c.int
    ) -> _c.int ---;

    @(link_name="GetTextureData")
    get_texture_data :: proc(texture : Texture2D) -> Image ---;

    @(link_name="GetScreenData")
    get_screen_data :: proc() -> Image ---;

    @(link_name="UpdateTexture")
    update_texture :: proc(
        texture : Texture2D,
        pixels : rawptr
    ) ---;

    @(link_name="ImageCopy")
    image_copy :: proc(image : Image) -> Image ---;

    @(link_name="ImageToPOT")
    image_to_pot :: proc(
        image : ^Image,
        fill_color : Color
    ) ---;

    @(link_name="ImageFormat")
    image_format :: proc(
        image : ^Image,
        new_format : _c.int
    ) ---;

    @(link_name="ImageAlphaMask")
    image_alpha_mask :: proc(
        image : ^Image,
        alpha_mask : Image
    ) ---;

    @(link_name="ImageAlphaClear")
    image_alpha_clear :: proc(
        image : ^Image,
        color : Color,
        threshold : _c.float
    ) ---;

    @(link_name="ImageAlphaCrop")
    image_alpha_crop :: proc(
        image : ^Image,
        threshold : _c.float
    ) ---;

    @(link_name="ImageAlphaPremultiply")
    image_alpha_premultiply :: proc(image : ^Image) ---;

    @(link_name="ImageCrop")
    image_crop :: proc(
        image : ^Image,
        crop : Rectangle
    ) ---;

    @(link_name="ImageResize")
    image_resize :: proc(
        image : ^Image,
        new_width : _c.int,
        new_height : _c.int
    ) ---;

    @(link_name="ImageResizeNN")
    image_resize_nn :: proc(
        image : ^Image,
        new_width : _c.int,
        new_height : _c.int
    ) ---;

    @(link_name="ImageResizeCanvas")
    image_resize_canvas :: proc(
        image : ^Image,
        new_width : _c.int,
        new_height : _c.int,
        offset_x : _c.int,
        offset_y : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageMipmaps")
    image_mipmaps :: proc(image : ^Image) ---;

    @(link_name="ImageDither")
    image_dither :: proc(
        image : ^Image,
        r_bpp : _c.int,
        g_bpp : _c.int,
        b_bpp : _c.int,
        a_bpp : _c.int
    ) ---;

    @(link_name="ImageExtractPalette")
    image_extract_palette :: proc(
        image : Image,
        max_palette_size : _c.int,
        extract_count : ^_c.int
    ) -> ^Color ---;

    @(link_name="ImageText")
    image_text :: proc(
        text : cstring,
        font_size : _c.int,
        color : Color
    ) -> Image ---;

    @(link_name="ImageTextEx")
    image_text_ex :: proc(
        font : Font,
        text : cstring,
        font_size : _c.float,
        spacing : _c.float,
        tint : Color
    ) -> Image ---;

    @(link_name="ImageDraw")
    image_draw :: proc(
        dst : ^Image,
        src : Image,
        src_rec : Rectangle,
        dst_rec : Rectangle
    ) ---;

    @(link_name="ImageDrawRectangle")
    image_draw_rectangle :: proc(
        dst : ^Image,
        rec : Rectangle,
        color : Color
    ) ---;

    @(link_name="ImageDrawRectangleLines")
    image_draw_rectangle_lines :: proc(
        dst : ^Image,
        rec : Rectangle,
        thick : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageDrawText")
    image_draw_text :: proc(
        dst : ^Image,
        position : Vector2,
        text : cstring,
        font_size : _c.int,
        color : Color
    ) ---;

    @(link_name="ImageDrawTextEx")
    image_draw_text_ex :: proc(
        dst : ^Image,
        position : Vector2,
        font : Font,
        text : cstring,
        font_size : _c.float,
        spacing : _c.float,
        color : Color
    ) ---;

    @(link_name="ImageFlipVertical")
    image_flip_vertical :: proc(image : ^Image) ---;

    @(link_name="ImageFlipHorizontal")
    image_flip_horizontal :: proc(image : ^Image) ---;

    @(link_name="ImageRotateCW")
    image_rotate_cw :: proc(image : ^Image) ---;

    @(link_name="ImageRotateCCW")
    image_rotate_ccw :: proc(image : ^Image) ---;

    @(link_name="ImageColorTint")
    image_color_tint :: proc(
        image : ^Image,
        color : Color
    ) ---;

    @(link_name="ImageColorInvert")
    image_color_invert :: proc(image : ^Image) ---;

    @(link_name="ImageColorGrayscale")
    image_color_grayscale :: proc(image : ^Image) ---;

    @(link_name="ImageColorContrast")
    image_color_contrast :: proc(
        image : ^Image,
        contrast : _c.float
    ) ---;

    @(link_name="ImageColorBrightness")
    image_color_brightness :: proc(
        image : ^Image,
        brightness : _c.int
    ) ---;

    @(link_name="ImageColorReplace")
    image_color_replace :: proc(
        image : ^Image,
        color : Color,
        replace : Color
    ) ---;

    @(link_name="GenImageColor")
    gen_image_color :: proc(
        width : _c.int,
        height : _c.int,
        color : Color
    ) -> Image ---;

    @(link_name="GenImageGradientV")
    gen_image_gradient_v :: proc(
        width : _c.int,
        height : _c.int,
        top : Color,
        bottom : Color
    ) -> Image ---;

    @(link_name="GenImageGradientH")
    gen_image_gradient_h :: proc(
        width : _c.int,
        height : _c.int,
        left : Color,
        right : Color
    ) -> Image ---;

    @(link_name="GenImageGradientRadial")
    gen_image_gradient_radial :: proc(
        width : _c.int,
        height : _c.int,
        density : _c.float,
        inner : Color,
        outer : Color
    ) -> Image ---;

    @(link_name="GenImageChecked")
    gen_image_checked :: proc(
        width : _c.int,
        height : _c.int,
        checks_x : _c.int,
        checks_y : _c.int,
        col1 : Color,
        col2 : Color
    ) -> Image ---;

    @(link_name="GenImageWhiteNoise")
    gen_image_white_noise :: proc(
        width : _c.int,
        height : _c.int,
        factor : _c.float
    ) -> Image ---;

    @(link_name="GenImagePerlinNoise")
    gen_image_perlin_noise :: proc(
        width : _c.int,
        height : _c.int,
        offset_x : _c.int,
        offset_y : _c.int,
        scale : _c.float
    ) -> Image ---;

    @(link_name="GenImageCellular")
    gen_image_cellular :: proc(
        width : _c.int,
        height : _c.int,
        tile_size : _c.int
    ) -> Image ---;

    @(link_name="GenTextureMipmaps")
    gen_texture_mipmaps :: proc(texture : ^Texture2D) ---;

    @(link_name="SetTextureFilter")
    set_texture_filter :: proc(
        texture : Texture2D,
        filter_mode : _c.int
    ) ---;

    @(link_name="SetTextureWrap")
    set_texture_wrap :: proc(
        texture : Texture2D,
        wrap_mode : _c.int
    ) ---;

    @(link_name="DrawTexture")
    draw_texture :: proc(
        texture : Texture2D,
        pos_x : _c.int,
        pos_y : _c.int,
        tint : Color
    ) ---;

    @(link_name="DrawTextureV")
    draw_texture_v :: proc(
        texture : Texture2D,
        position : Vector2,
        tint : Color
    ) ---;

    @(link_name="DrawTextureEx")
    draw_texture_ex :: proc(
        texture : Texture2D,
        position : Vector2,
        rotation : _c.float,
        scale : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextureRec")
    draw_texture_rec :: proc(
        texture : Texture2D,
        source_rec : Rectangle,
        position : Vector2,
        tint : Color
    ) ---;

    @(link_name="DrawTextureQuad")
    draw_texture_quad :: proc(
        texture : Texture2D,
        tiling : Vector2,
        offset : Vector2,
        quad : Rectangle,
        tint : Color
    ) ---;

    @(link_name="DrawTexturePro")
    draw_texture_pro :: proc(
        texture : Texture2D,
        source_rec : Rectangle,
        dest_rec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        tint : Color
    ) ---;

    @(link_name="DrawTextureNPatch")
    draw_texture_n_patch :: proc(
        texture : Texture2D,
        n_patch_info : NPatchInfo,
        dest_rec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        tint : Color
    ) ---;

    @(link_name="GetFontDefault")
    get_font_default :: proc() -> Font ---;

    @(link_name="LoadFont")
    load_font :: proc(file_name : cstring) -> Font ---;

    @(link_name="LoadFontEx")
    load_font_ex :: proc(
        file_name : cstring,
        font_size : _c.int,
        font_chars : ^_c.int,
        chars_count : _c.int
    ) -> Font ---;

    @(link_name="LoadFontFromImage")
    load_font_from_image :: proc(
        image : Image,
        key : Color,
        first_char : _c.int
    ) -> Font ---;

    @(link_name="LoadFontData")
    load_font_data :: proc(
        file_name : cstring,
        font_size : _c.int,
        font_chars : ^_c.int,
        chars_count : _c.int,
        type : _c.int
    ) -> ^CharInfo ---;

    @(link_name="GenImageFontAtlas")
    gen_image_font_atlas :: proc(
        chars : ^CharInfo,
        chars_count : _c.int,
        font_size : _c.int,
        padding : _c.int,
        pack_method : _c.int
    ) -> Image ---;

    @(link_name="UnloadFont")
    unload_font :: proc(font : Font) ---;

    @(link_name="DrawFPS")
    draw_fps :: proc(
        pos_x : _c.int,
        pos_y : _c.int
    ) ---;

    @(link_name="DrawText")
    draw_text :: proc(
        text : cstring,
        pos_x : _c.int,
        pos_y : _c.int,
        font_size : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawTextEx")
    draw_text_ex :: proc(
        font : Font,
        text : cstring,
        position : Vector2,
        font_size : _c.float,
        spacing : _c.float,
        tint : Color
    ) ---;
